test/files/neg/bug909.check
bug909.scala:6: error: type mismatch;
 found   : java.lang.String("Hello")
 required: Int
                        case Foo("Hello") =>
                                 ^
one error found
